[gd_scene load_steps=3 format=3 uid="uid://6ygqegta6dek"]

[ext_resource type="Script" uid="uid://gdqxa44bc62r" path="res://scenes/file-tree-view-explorer/file-tree-view-explorer.gd" id="1_wruwl"]
[ext_resource type="Texture2D" uid="uid://dgcmvdjsus4wo" path="res://scenes/file-previewer/assets/open-windows-explorer.png" id="2_k063r"]

[node name="FileTreeViewExplorer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wruwl")

[node name="vBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="hBoxContainer" type="HBoxContainer" parent="vBoxContainer"]
layout_mode = 2

[node name="lineEdit" type="LineEdit" parent="vBoxContainer/hBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UpButton" type="Button" parent="vBoxContainer/hBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "^"

[node name="BackButton" type="Button" parent="vBoxContainer/hBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "<"

[node name="ForwardButton\'" type="Button" parent="vBoxContainer/hBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = ">"

[node name="OpenFileExplorerButton" type="TextureButton" parent="vBoxContainer/hBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_k063r")

[node name="FileTree" type="Tree" parent="vBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
hide_root = true

[node name="hBoxContainer2" type="HBoxContainer" parent="vBoxContainer"]
layout_mode = 2

[node name="PreviousButton" type="Button" parent="vBoxContainer/hBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "<"

[node name="NextButton" type="Button" parent="vBoxContainer/hBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = ">"

[node name="UpButton" type="Button" parent="vBoxContainer/hBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "^"

[node name="DownButton" type="Button" parent="vBoxContainer/hBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "\\/"

[connection signal="pressed" from="vBoxContainer/hBoxContainer/OpenFileExplorerButton" to="." method="_on_open_file_explorer_button_pressed"]
[connection signal="pressed" from="vBoxContainer/hBoxContainer2/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="vBoxContainer/hBoxContainer2/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="vBoxContainer/hBoxContainer2/UpButton" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="vBoxContainer/hBoxContainer2/DownButton" to="." method="_on_down_button_pressed"]
